--- a/README.org
+++ b/README.org
@@ -27,15 +27,27 @@
   
   *Note* - org2blog depends on xml-rpc available at [[http://launchpad.net/xml-rpc-el][Launchpad]]. Add it
    to your load-path before using org2blog. 
-
+   
 * Usage
   1. Log in using *M-x org2blog-login RET*. Provide xmlrpc url,
      username, password and blog-id (not in use now; useful when
      editing posts). Optionally, you could set these in your .emacs. 
+     
   2. To start writing a new post use *M-x org2blog-new-entry RET*
      Tags to your post are comma separated values passed to KEYWORDS.
      Categories are comma separated values passed to
      DESCRIPTION. Completion (for both) is triggered using *C-c t*.
+
   3. Use *C-c p* to Publish or *C-c d* to post as draft. 
+
   4. You could also publish your exiting org files; with a few edits.
      
+* *wpautop* issue with WordPress
+  WordPress has an annoying plugin called *wpautop* which
+  automatically /formats/ the text. It shows up line feeds in the html
+  source as line breaks in the output. With automatic line wrapping in
+  org-mode, the results are badly formatted blog posts. :-(
+
+  Use the disable wpautop plugin, if you are running your own instance
+  of WordPress. If you have a wordpress.com blog like me, stop using
+  org2blog! 
