--- a/README.org
+++ b/README.org
@@ -41,4 +41,8 @@
   3. Use *C-c p* to Publish or *C-c d* to post as draft. 
 
   4. You could also publish your exiting org files; with a few edits.
+     - Add the #+TITLE, [#+KEYWORDS, #+DESCRIPTION].
+     - *M-x org2blog-post-entry* to post as a draft.
+     - The same thing as above, with a prefix argument publishes. 
+
      
