--- a/README.org
+++ b/README.org
@@ -46,8 +46,8 @@
        to your file.  All of these are Optional.  If a #+TITLE is
        absent, your post will be untitled.
      - If you wish to edit an existing post, add a #+POSTID.
-     - To post as draft - *M-x org2blog-post-entry* 
-     - To publish - *C-u M-x org2blog-post-entry* 
+     - To post as draft - *M-x org2blog-post-as-entry* 
+     - To publish - *C-u M-x org2blog-post-as-entry* 
      - Alternatively, you could enable org2blog-mode using *M-x
        org2blog-mode*.  This provides the key-bindings *C-c p*, *C-c
        d* and *C-c t*. 
