--- a/README.org
+++ b/README.org
@@ -47,13 +47,18 @@
        to your file.  All of these are Optional.  If a #+TITLE is
        absent, your post will be untitled.
      - If you wish to edit an existing post, add a #+POSTID.
-     - To post as draft - *M-x org2blog-post-as-entry* 
-     - To publish - *C-u M-x org2blog-post-as-entry* 
+     - To post as draft - *M-x org2blog-post-entry* 
+     - To publish - *C-u M-x org2blog-post-entry* 
      - Alternatively, you could enable org2blog-mode using *M-x
        org2blog-mode*.  This provides the key-bindings *C-c p*, *C-c
        d* and *C-c t*. 
+     - To post entry as a page, use *M-x org2blog-post-entry-as-page* 
 
-  5. To delete an entry or a page -
+  5. Thanks to Sacha, you can now also post a subtree with *M-x
+     org2blog-post-subtree*. Tags of the subtree will be used for
+     tags. Other properties can be set using a property drawer. 
+
+  6. To delete an entry or a page -
      - If you are in the buffer of the entry/page, with #+POST_ID
        present on the page, use *M-x org2blog-delete-entry* or *M-x
        org2blog-delete-page*  
