--- a/README.org
+++ b/README.org
@@ -77,3 +77,9 @@
      sections of the org-manual.
   2. If you wish to post to blogger from org-mode, look at the
      [[http://code.google.com/p/emacspeak/source/browse/trunk/lisp/g-client/org2blogger.el][g-client extension]] by [[http://en.wikipedia.org/wiki/T._V._Raman][T. V. Raman]].  
+  3. If you have an issue/bug/feature request, use the issue tracker
+     on git or drop a mail to punchagan+org2blog[at]gmail[dot]com.  
+  4. If you haven't found a bug/issue, but have tried out and/or are
+     using org2blog to post to your blog, post me a line on how you
+     use it and on what blog. I'd love to hear from you!
+     
