--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 #+TITLE: Org2blog Readme
 #+Options: num:nil
-#+startup: indent
+#+STARTUP: odd
 #+Style: <style> h1,h2,h3 {font-family: arial, helvetica, sans-serif} </style>
 
 * Overview
@@ -25,78 +25,84 @@
 
   to your dot emacs.  
 
-** Dependencies
+*** Dependencies
    org2blog depends on /xml-rpc/ available at [[http://launchpad.net/xml-rpc-el][Launchpad]].  Add it to your /load-path/ before using org2blog.
 
 * Usage
-** Defining your blog setup
-   You can optionally save the xmlrpc url of your blog and the username.
+*** Defining your blog setup
+    You can optionally save the xmlrpc url of your blog and the username.
 
-  : (setq org2blog-server-url "http://username.wordpress.com/xmlrpc.php"
-  :       org2blog-server-user "username"
-  :       org2blog-server-weblog-id "")
+    : (setq org2blog-server-url "http://username.wordpress.com/xmlrpc.php"
+    :       org2blog-server-user "username"
+    :       org2blog-server-weblog-id "")
+    
+    You can set org2blog-server-url to be a list of blogs to post to.
+    You can then choose the blog to post to, when logging in.
+    
+    : (setq org2blog-server-url (list "http://user1.wordpress.com/xmlrpc.php"
+    :                                 "http://user2.wordpress.com/xmlrpc.php"))
+    
+    If you use only categories, set the org2blog-use-tags-as-categories
+    variable. 
 
-  If you use only categories, set the org2blog-use-tags-as-categories
-  variable. 
+    : (setq org2blog-use-tags-as-categories t)
 
-  : (setq org2blog-use-tags-as-categories t)
-
-  If you wish to be asked for confirmation before publishing a post,
-  set the variable =org2blog-confirm-post=. 
-
-  To browse or customize other variables use the customize group
-  function.
-
-  : M-x customize-group org2blog RET
-
-** Logging In 
-Use *M-x org2blog-login*.  Provide xmlrpc url, username,
-password and blog-id. (blog-id isn't really being used.)
-Optionally, you could set these in your .emacs.    
-     
-** Writing a new post 
-Use *M-x org2blog-new-entry*. 
-   - Tags and Categories are comma or space separated values.
-     Completion (for both) is triggered using *C-c t*.  If a new
-     category is used you will be prompted before adding it.  
-   - The excerpt for a post can be written as =#+DESCRIPTION=.  
-   - The parent for a page can be specified using =#+PARENT=.\\
-     *C-c  t* again provides completion for the page name. 
-
-** Publishing 
- | post buffer as draft      | *C-c d* | *M-x     org2blog-post-buffer*         |
- | publish buffer            | *C-c p* | *C-u M-x org2blog-post-buffer*         |
- | post buffer as page draft | *C-c D* | *M-x     org2blog-post-buffer-as-page* |
- | publish buffer as page    | *C-c P* | *C-u M-x org2blog-post-buffer-as-page* |
-
-
-** Post your existing org-files too
-   - Add =#+TITLE=, =#+OPTIONS=, =#+TAGS=, =#+CATEGORY=,
-         =#+DESCRIPTION=, =#+DATE=, to your file.  (All of these are
-     Optional)
-   - Add a =#+POSTID= to edit an existing post.
-   - Post buffer using the function names, as above. 
+    If you wish to be asked for confirmation before publishing a post,
+    set the variable =org2blog-confirm-post=. 
    
-** Posting a subtree
-   - Use *M-x   org2blog-post-subtree*.
-   - Tags of the subtree will be used for tags. Other properties can be set using a property drawer. 
+    To browse or customize other variables use the customize group
+    function.
 
-** Delete an entry or a page
-   - If you are in the buffer of the entry/page, with =#+POSTID=
-     present on the page, use :\\
-       *M-x org2blog-delete-entry* or *M-x  org2blog-delete-page*
-   - If you want to delete a particular post (whose post-id is
-       known) from any buffer, use\\ 
-       *C-u post-id   M-x org2blog-delete-entry*.  
+    : M-x customize-group org2blog RET
+
+*** Logging In 
+    Use *M-x org2blog-login*.  Provide xmlrpc url, username, password
+    and blog-id. (blog-id isn't really being used.)  Optionally, you
+    could set these in your .emacs.
      
-   Similarly, for a page.
+*** Writing a new post 
+    Use *M-x org2blog-new-entry*. 
+     - Tags and Categories are comma or space separated values.
+       Completion (for both) is triggered using *C-c t*.  If a new
+       category is used you will be prompted before adding it.  
+     - The excerpt for a post can be written as =#+DESCRIPTION=.
+     - The parent for a page can be specified using =#+PARENT=.\\ *C-c
+       t* again provides completion for the page name.
 
-** Enabling org2blog mode (defines key-bindings)
-   - use *M-x org2blog-mode*.  
-     This defines the following the key-bindings:
-       | *C-c p* | publish buffer                   |
-       | *C-c d* | post as draft                    |
-       | *C-c t* | complete tag or parent page name |
+*** Publishing 
+    | post buffer as draft      | *C-c d* | *M-x     org2blog-post-buffer*         |
+    | publish buffer            | *C-c p* | *C-u M-x org2blog-post-buffer*         |
+    | post buffer as page draft | *C-c D* | *M-x     org2blog-post-buffer-as-page* |
+    | publish buffer as page    | *C-c P* | *C-u M-x org2blog-post-buffer-as-page* |
+
+*** Post your existing org-files too
+    - Add =#+TITLE=, =#+OPTIONS=, =#+TAGS=, =#+CATEGORY=,
+          =#+DESCRIPTION=, =#+DATE=, to your file.  (All of these are
+      Optional)
+    - Add a =#+POSTID= to edit an existing post.
+    - Post buffer using the function names, as above. 
+    
+*** Posting a subtree
+    - Use *M-x   org2blog-post-subtree*.
+    - Tags of the subtree will be used for tags. Other properties can
+      be set using a property drawer.
+
+*** Delete an entry or a page
+    - If you are in the buffer of the entry/page, with =#+POSTID=
+      present on the page, use :\\
+        *M-x org2blog-delete-entry* or *M-x  org2blog-delete-page*
+    - If you want to delete a particular post (whose post-id is
+        known) from any buffer, use\\ 
+        *C-u post-id   M-x org2blog-delete-entry*.  
+      
+    Similarly, for a page.
+
+*** Enabling org2blog mode (defines key-bindings)
+    - use *M-x org2blog-mode*.  
+      This defines the following the key-bindings:
+      | *C-c p* | publish buffer                   |
+      | *C-c d* | post as draft                    |
+      | *C-c t* | complete tag or parent page name |
 
 * Miscellaneous 
   1. You may want to look at the [[http://orgmode.org/manual/Export-options.html#Export-options][Export options]] and [[http://orgmode.org/manual/HTML-export.html#HTML-export][HTML export]]
