--- a/README.org
+++ b/README.org
@@ -156,5 +156,5 @@
 
   5. Now, that org2blog does have a bunch of users, I'd like to keep
      track of the blogs it's being used on. :) Feel free to add your
-     site to the list of sites using org2blog, on the wiki at github. 
+     site to the list of sites using org2blog, on the [[https://github.com/punchagan/org2blog/wiki/Blogs-using-org2blog][wiki]] at github.
      
