--- a/README.org
+++ b/README.org
@@ -144,7 +144,7 @@
 
   2. If you wish to post to blogger from org-mode, look at -
 
-     + [[http://code.google.com/p/emacspeak/source/browse/trunk/lisp/g-client/org2blogger.el][g-client extension]] by [[http://en.wikipedia.org/wiki/T._V._Raman][T. V. Raman]]
+     + [[http://code.google.com/p/emacspeak/source/browse/trunk/lisp/g-client/org2blogger.el][g-client extension]] by [[http://tehom-blog.blogspot.com/][Tom Brenton]]
      + [[http://github.com/rileyrg/org-googlecl][org-googlecl]] by Richard Riley -- uses [[http://code.google.com/p/googlecl/][googlecl]]
 
   3. If you have an issue/bug/feature request, use the issue tracker
