--- a/README.org
+++ b/README.org
@@ -8,6 +8,9 @@
   [[http://wordpress.org/][WordPress]] blogs.  org2blog/wp is one of the two packages named
   org2blog.  The other is [[http://repo.or.cz/r/org2blog.git/][org2blog/atom]] by [[http://tehom-blog.blogspot.com/][Tom Breton]]. 
 
+  org2blog/wp should, /ideally/, work with any platform that supports
+  xml-rpc but some of wordpress specific features may not work.
+
   org2blog was inspired by and based on a [[http://paste.lisp.org/display/69993][wordpress posting client for
   muse-mode]] written by [[http://www.emacswiki.org/emacs/AshishShukla][Ashish Shukla]].  
 
@@ -158,4 +161,6 @@
   5. Now, that org2blog does have a bunch of users, I'd like to keep
      track of the blogs it's being used on. :) Feel free to add your
      site to the list of sites using org2blog, on the [[https://github.com/punchagan/org2blog/wiki/Blogs-using-org2blog][wiki]] at github.
+
+  6. The [[http://www.doclear.net/][Dotclear]] weblog engine [[https://github.com/punchagan/org2blog/issues/issue/37][also works]] with org2blog
      
