--- a/README.org
+++ b/README.org
@@ -148,8 +148,9 @@
 
   2. If you wish to post to blogger from org-mode, look at -
 
-     + [[http://repo.or.cz/r/org2blog.git/][org2blog/atom]], a g-client extension by [[http://tehom-blog.blogspot.com/][Tom Breton]]
-     + [[http://github.com/rileyrg/org-googlecl][org-googlecl]] by Richard Riley -- uses [[http://code.google.com/p/googlecl/][googlecl]]
+     1. [[http://repo.or.cz/r/org2blog.git/][org2blog/atom]], a g-client extension by [[http://tehom-blog.blogspot.com/][Tom Breton]]
+
+     2. [[http://github.com/rileyrg/org-googlecl][org-googlecl]] by Richard Riley -- uses [[http://code.google.com/p/googlecl/][googlecl]]
 
   3. If you have an issue/bug/feature request, use the issue tracker
      on git or drop a mail to punchagan+org2blog[at]gmail[dot]com.  
